Removed global variables, first steps towards modularizing the library

--- a/examples/keyboard.html
+++ b/examples/keyboard.html
@@ -38,96 +38,96 @@
 
 
     e.putText("up", 10, 50);
-    if(e.keyPress(stumge_key_up)) {
+    if(e.keyPress(e.stumge_key_up)) {
       sprite_tick.x = 73;
       sprite_tick.y = 50;
       e.setSprite(sprite_tick);
     }
-    if(e.keyPressed(stumge_key_up)) {
+    if(e.keyPressed(e.stumge_key_up)) {
       sprite_tick.x = 93;
       sprite_tick.y = 50;
       e.setSprite(sprite_tick);
     }
 
     e.putText("down", 10, 60);
-    if(e.keyPress(stumge_key_down)) {
+    if(e.keyPress(e.stumge_key_down)) {
       sprite_tick.x = 73;
       sprite_tick.y = 60;
       e.setSprite(sprite_tick);
     }
-    if(e.keyPressed(stumge_key_down)) {
+    if(e.keyPressed(e.stumge_key_down)) {
       sprite_tick.x = 93;
       sprite_tick.y = 60;
       e.setSprite(sprite_tick);
     }
 
     e.putText("left", 10, 70);
-    if(e.keyPress(stumge_key_left)) {
+    if(e.keyPress(e.stumge_key_left)) {
       sprite_tick.x = 73;
       sprite_tick.y = 70;
       e.setSprite(sprite_tick);
     }
-    if(e.keyPressed(stumge_key_left)) {
+    if(e.keyPressed(e.stumge_key_left)) {
       sprite_tick.x = 93;
       sprite_tick.y = 70;
       e.setSprite(sprite_tick);
     }
 
     e.putText("right", 10, 80);
-    if(e.keyPress(stumge_key_right)) {
+    if(e.keyPress(e.stumge_key_right)) {
       sprite_tick.x = 73;
       sprite_tick.y = 80;
       e.setSprite(sprite_tick);
     }
-    if(e.keyPressed(stumge_key_right)) {
+    if(e.keyPressed(e.stumge_key_right)) {
       sprite_tick.x = 93;
       sprite_tick.y = 80;
       e.setSprite(sprite_tick);
     }
 
     e.putText("A btn", 10, 90);
-    if(e.keyPress(stumge_key_button_1)) {
+    if(e.keyPress(e.stumge_key_button_1)) {
       sprite_tick.x = 73;
       sprite_tick.y = 90;
       e.setSprite(sprite_tick);
     }
-    if(e.keyPressed(stumge_key_button_1)) {
+    if(e.keyPressed(e.stumge_key_button_1)) {
       sprite_tick.x = 93;
       sprite_tick.y = 90;
       e.setSprite(sprite_tick);
     }
 
     e.putText("B btn", 10, 100);
-    if(e.keyPress(stumge_key_button_2)) {
+    if(e.keyPress(e.stumge_key_button_2)) {
       sprite_tick.x = 73;
       sprite_tick.y = 100;
       e.setSprite(sprite_tick);
     }
-    if(e.keyPressed(stumge_key_button_2)) {
+    if(e.keyPressed(e.stumge_key_button_2)) {
       sprite_tick.x = 93;
       sprite_tick.y = 100;
       e.setSprite(sprite_tick);
     }
 
     e.putText("start", 10, 110);
-    if(e.keyPress(stumge_key_start)) {
+    if(e.keyPress(e.stumge_key_start)) {
       sprite_tick.x = 73;
       sprite_tick.y = 110;
       e.setSprite(sprite_tick);
     }
-    if(e.keyPressed(stumge_key_start)) {
+    if(e.keyPressed(e.stumge_key_start)) {
       sprite_tick.x = 93;
       sprite_tick.y = 110;
       e.setSprite(sprite_tick);
     }
 
     e.putText("select", 10, 120);
-    if(e.keyPress(stumge_key_select)) {
+    if(e.keyPress(e.stumge_key_select)) {
       sprite_tick.x = 73;
       sprite_tick.y = 120;
       e.setSprite(sprite_tick);
     }
-    if(e.keyPressed(stumge_key_select)) {
+    if(e.keyPressed(e.stumge_key_select)) {
       sprite_tick.x = 93;
       sprite_tick.y = 120;
       e.setSprite(sprite_tick);
