--- a/examples/sprites.html
+++ b/examples/sprites.html
@@ -106,7 +106,7 @@
       e.setSprite(cage_sprite);
       e.setSprite(sprite_moving);
       sprite_moving.x += 1;
-      if(sprite_moving.x > stumge_width) {
+      if(sprite_moving.x > e.stumge_width) {
         sprite_moving.x = 0;
       }
     }
