--- a/examples/keyboard.html
+++ b/examples/keyboard.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="../src/stumge.js"></script>
+  <script src="../dist/stumge.min.js"></script>
   <title>STUMGE Showcase</title>
 </head>
 <body>
